--- a/week1day5/week1day5.css
+++ b/week1day5/week1day5.css
@@ -2,9 +2,7 @@
     width: 200px;
     height: 200px;
     background: blue;
-    border: solid;
-    border-width: 3px;
-    border-color: red;
+    border: solid 3px red;
     margin: 20px;
 }
 
@@ -12,10 +10,9 @@
     width: 100px;
     height: 100px;
     background: deepskyblue;
-    border: solid black;
+    border: solid black 3px;
     border-radius: 50%;
     margin: 20px;
-    border-width: 3px;
     padding: 5px;
 }
 
@@ -23,8 +20,43 @@
     width: 94px;
     height: 94px;
     background: deepskyblue;
-    border: solid black;
+    border: solid black 3px;
     border-radius: 50%;
-    border-width: 3px;
 }
 
+.table {
+    font-size: x-large;
+    margin: 20px;
+}
+
+td, th {
+    border: 1px solid black;
+    padding: 20px 10px;
+}
+
+thead   {
+    text-align: left;
+    background: blue;
+    color: white;
+}
+
+tbody {
+    text-align: center;
+    background: #ffc350;
+}
+
+thead tr td:first-child {
+    border-top-left-radius: 20px;
+}
+
+thead tr td:last-child {
+    border-top-right-radius: 20px;
+}
+
+tbody .table_lastrow td:first-child {
+    border-bottom-left-radius: 20px;
+}
+
+tbody .table_lastrow td:last-child {
+    border-bottom-right-radius: 20px;
+}
