--- a/week1day5/week1day5.css
+++ b/week1day5/week1day5.css
@@ -95,8 +95,6 @@ tbody .table_lastrow td:last-child {
     text-decoration: underline;
 }
 
-
-
 .link2 {
     font-style: italic;
     font-size: xx-large;
@@ -123,11 +121,103 @@ tbody .table_lastrow td:last-child {
     border-right: 30px solid lightgreen;
     border-radius: 50%;
     line-height:100px;
+    margin: 20px
+}
+
+.form_container {
+    width: 500px;
+    background: #f5f5f5;
+    margin: 20px;
+    border: darkgray solid 1px;
+    border-radius: 5px;
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+}
+
+.form_title {
+    margin: 10px 10px 5px 10px;
+    color: #333;
+}
+
+h3  {
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 .form {
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    align-items: flex-start;
+    color: #333;
+    font-size: small;
+}
+
+.label_form {
+    display: flex;
+    text-align: right;
+    align-items: flex-start;
+    justify-content: center;
+    width: 45%;
+}
+
+.input_form {
+    text-align: left;
+    height: auto;
+    margin-left: 10px;
+    align-items: flex-start;
+    justify-content: center;
+    width: 70%;
+}
+
+ul {
+    margin: 0;
+    list-style: none;
+    padding: 0;
+}
+
+li {
+    margin: 20px 0;
+}
+
+li label {
+    display: inline-block;
+    height: 25px;
+}
+
+label {
+    text-align: right;
     align-items: center;
+}
+
+input   {
+    font: 20px Arial;
+    width: 200px;
+    box-sizing: border-box;
+    border: 1px solid #999;
+    border-radius: 3px;
+}
+
+button {
+    margin: 20px 0;
+    height: 25px;
+}
+
+.submit_button {
+    background: rgb(0,137,204);
+    color: powderblue;
+    box-sizing: border-box;
+    border: 1px solid #333333;
+    border-radius: 4px;
+    width: 100px;
+    height: 30px;
+}
+
+.cancel_button {
+    box-sizing: border-box;
+    border: 1px solid #999;
+    border-radius: 3px;
+    color: #333333;
+    width:70px;
+    height: 30px;
 }
