--- a/week1day5/week1day5task1-6.css
+++ b/week1day5/week1day5task1-6.css
@@ -342,3 +342,46 @@ li.file:hover .file_submenu, li.edit:hover .edit_submenu {
     color: white;
     text-decoration: none;
 }
+
+.russia-flag {
+    width: 315px;
+    height: 210px;
+    box-shadow: 0 0 10px 0 black;
+    margin-left: 20px;
+}
+
+.white {
+    height: 70px;
+    background: white;
+}
+
+.blue {
+    background: #0039A6;
+    height: 70px;
+}
+
+.red {
+    background: #D52B1E;
+    height: 70px;
+}
+
+.flag-title {
+    margin-left: 20px;
+}
+
+.japan-flag {
+    margin-left: 20px;
+    width: 315px;
+    height: 210px;
+    box-shadow: 0 0 10px 0 black;
+    background: white;
+    display: flex;
+}
+
+.red-circle {
+    width: 126px;
+    height: 126px;
+    background: red;
+    margin: auto;
+    border-radius: 50%;
+}
