--- a/week1day5/week1day5task1-6.css
+++ b/week1day5/week1day5task1-6.css
@@ -432,3 +432,14 @@ a.submenu1-a:hover {
     color: black;
 }
 
+.button2 {
+    margin: 20px;
+    width: 250px;
+    height: 110px;
+    /*border: #333333 solid 1px;*/
+    border-radius: 20px;
+    font-size: 45px;
+    cursor: pointer;
+    box-shadow: inset 0 0 10px 0 black;
+}
+
