--- a/week1day5/week1day5task1-6.css
+++ b/week1day5/week1day5task1-6.css
@@ -436,10 +436,23 @@ a.submenu1-a:hover {
     margin: 20px;
     width: 250px;
     height: 110px;
-    /*border: #333333 solid 1px;*/
     border-radius: 20px;
     font-size: 45px;
     cursor: pointer;
     box-shadow: inset 0 0 10px 0 black;
 }
 
+.div3 {
+    width: 300px;
+    height: 200px;
+    margin: 20px;
+    display: table-cell;
+    vertical-align: middle;
+    border: 15px solid;
+    border-image-slice: 2;
+    border-image-source: linear-gradient(to left, deeppink, purple);
+}
+
+.p3 {
+    text-align: center;
+}
