--- a/week1day5/week1day5task1-6.css
+++ b/week1day5/week1day5task1-6.css
@@ -457,6 +457,8 @@ a.submenu1-a:hover {
     margin: 80px;
 }
 
+/****************/
+
 .menu4-div {
     margin: 20px;
 }
@@ -520,3 +522,31 @@ a.submenu1-a:hover {
     font-weight: bold;
 }
 
+/***********/
+
+.menu5-div {
+    width: 238px;
+    height: 50px;
+    background: url("background5.png") no-repeat;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 20px;
+}
+
+.menu5-div-div {
+    height: 20px;
+    width: 20px;
+    background-color: black;
+    border-radius: 50%;
+    border: 3px solid whitesmoke;
+    box-shadow: 0 0 3px 1px whitesmoke, 0 0 3px 1px whitesmoke inset;
+    cursor: pointer;
+}
+
+.menu5-div-div:hover {
+    background-color: red;
+    box-shadow: 0 0 6px 3px whitesmoke, 0 0 3px 1px whitesmoke inset;
+}
+
+/**********************/
