Done task 2 week 2 day 1

--- a/week2day1/week2day1.css
+++ b/week2day1/week2day1.css
@@ -43,3 +43,11 @@
 }
 
 /******2.******/
+
+.capital-letter {
+    color: #0039A6;
+    font-weight: bold;
+    font-size: 1.3em;
+}
+
+/********3.********/
