--- a/week2day1/week2day1.css
+++ b/week2day1/week2day1.css
@@ -44,6 +44,10 @@
 
 /******2.******/
 
+.div2   {
+    margin: 20px;
+}
+
 .capital-letter {
     color: #0039A6;
     font-weight: bold;
@@ -51,3 +55,31 @@
 }
 
 /********3.********/
+
+.div3  {
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.div3-div1 {
+    border-top: 1px solid black;
+    width: 770px;
+}
+
+.div3-div2 {
+    border-top: 1px solid black;
+    width: 760px;
+}
+
+.div3-p {
+    margin-top: 0;
+    margin-right: 0;
+}
+
+.italic3 {
+    font-style: italic;
+}
+
+/*******4.******/
