Done task 5 week 2 day 1

--- a/week2day1/week2day1.css
+++ b/week2day1/week2day1.css
@@ -99,3 +99,13 @@
 }
 
 /**********5.********/
+
+.input5 {
+    margin-left: 20px;
+    width: 200px;
+}
+
+.input5::placeholder {
+    color: blue;
+    background-color: darkgray;
+}
