--- a/week2day1/week2day1.css
+++ b/week2day1/week2day1.css
@@ -102,10 +102,23 @@
 
 .input5 {
     margin-left: 20px;
-    width: 200px;
 }
 
 .input5::placeholder {
     color: blue;
     background-color: darkgray;
+}
+
+/********6.*******/
+
+
+.input6 {
+    margin-left: 20px;
+    width: 500px;
+    box-shadow: -5px -3px 6px 4px gray;
+    border:whitesmoke;
+}
+
+.input6::placeholder {
+    color: red;
 }
