--- a/week2day1/week2day1.css
+++ b/week2day1/week2day1.css
@@ -135,3 +135,14 @@
 }
 
 /********8.******/
+
+.div8 {
+    margin: 20px;
+    counter-reset: n 0;
+}
+
+.div8-p::before {
+    counter-increment: n;
+    content: "Абзац {" counter(n) "}:";
+    padding-right: 10px;
+}
