--- a/week2day1/week2day1.css
+++ b/week2day1/week2day1.css
@@ -146,3 +146,18 @@
     content: "Абзац {" counter(n) "}:";
     padding-right: 10px;
 }
+
+/********9.*******/
+
+.ol9 {
+    margin: 20px;
+}
+
+.ol9-li {
+    font-size: 1.5em;
+}
+
+.ol9-li:nth-child(4) {
+    font-size: 2em;
+    color: blue;
+}
