--- a/week2day1/week2day1.css
+++ b/week2day1/week2day1.css
@@ -216,12 +216,12 @@
 
 .div12 {
     display: flex;
-    align-items: center;
     margin: 20px;
 }
 
+
 .radio12-label {
-    font-size: 1.2em;
+    font-size: 1.4em;
     opacity: 0.5;
     cursor: pointer;
     margin: 0 10px;
@@ -234,12 +234,13 @@
 .radio12-label::before {
     content: " ";
     display: inline-block;
-    background-color: #D52B1E;
+    background-color: white;
     width: 15px;
     height: 15px;
     border-radius: 50%;
-    border: 1px solid red;
+    border: 2px solid red;
     margin-right: 20px;
+    box-shadow: 0 0 3px 3px red;
 }
 
 .radio12:checked + label {
