Done task 13 week 2 day 1

--- a/week2day1/week2day1.css
+++ b/week2day1/week2day1.css
@@ -249,3 +249,13 @@
 }
 
 /*******13.*******/
+
+.div13 {
+    margin: 20px;
+}
+
+.div13-p:not(.test) {
+    color: red;
+}
+
+/**********14.*******/
