Done task 14 week 2 day 1

--- a/week2day1/week2day1.css
+++ b/week2day1/week2day1.css
@@ -259,3 +259,15 @@
 }
 
 /**********14.*******/
+
+.ul14 {
+    margin: 20px;
+    font-size: 1.6em;
+}
+
+.ul14-li:not(:first-child) {
+    color: red;
+}
+
+
+/*******15.******/
