--- a/week2day1/week2day1.css
+++ b/week2day1/week2day1.css
@@ -300,3 +300,237 @@
 
 /*******16*****/
 
+.div16 {
+    display: flex;
+    margin: 20px;
+}
+
+.div16-div {
+    width: 100px;
+    height: 200px;
+    /*border: 1px solid grey;*/
+    margin: 3px;
+    overflow-y: scroll;
+}
+
+.div16-div-div {
+    min-height: 300px;
+}
+
+/*1*/
+.div16-div1::-webkit-scrollbar {
+    width: 12px;
+    background-color: white;
+}
+
+.div16-div1::-webkit-scrollbar-thumb {
+    background-color: #a21212;
+    border-radius: 5px;
+}
+
+.div16-div1::-webkit-scrollbar-track {
+    background-color: white;
+    box-shadow: 0 0 2px 2px #999999 inset;
+    border-radius: 5px;
+}
+
+/*2*/
+.div16-div2::-webkit-scrollbar {
+    width: 8px;
+    background-color: white;
+}
+
+.div16-div2::-webkit-scrollbar-thumb {
+    background-color: black;
+    border-radius: 5px;
+}
+
+.div16-div2::-webkit-scrollbar-track {
+    background-color: white;
+    box-shadow: 0 0 2px 2px #999999 inset;
+    border-radius: 5px;
+}
+
+/*3*/
+.div16-div3::-webkit-scrollbar {
+    width: 12px;
+    background-color: white;
+}
+
+.div16-div3::-webkit-scrollbar-thumb {
+    background: linear-gradient(to bottom, rgb(0, 200, 250) 50%, rgb(0, 150, 240) 50%);
+    border-radius: 2px;
+}
+
+.div16-div3::-webkit-scrollbar-track {
+    background-color: white;
+    box-shadow: 0 0 2px 2px #999999 inset;
+    border-radius: 2px;
+}
+
+/*4*/
+.div16-div4::-webkit-scrollbar {
+    width: 12px;
+    background-color: white;
+}
+
+.div16-div4::-webkit-scrollbar-thumb {
+    background: repeating-linear-gradient(
+    45deg,
+    #FE9E0DFF 25%, #FE9E0DFF 50%,
+    #f6e52a 50%, #f6e52a 75%);
+    border-radius: 2px;
+}
+
+.div16-div4::-webkit-scrollbar-track {
+    background-color: white;
+    box-shadow: 0 0 2px 2px #999999 inset;
+    border-radius: 2px;
+}
+
+/*5*/
+.div16-div5::-webkit-scrollbar {
+    width: 12px;
+    background-color: white;
+}
+
+.div16-div5::-webkit-scrollbar-thumb {
+    background: linear-gradient(to bottom, blue, #9292ff);
+    border-radius: 5px;
+}
+
+.div16-div5::-webkit-scrollbar-track {
+    background-color: white;
+    box-shadow: 0 0 2px 2px #999999 inset;
+    border-radius: 5px;
+}
+
+/*6*/
+.div16-div6::-webkit-scrollbar {
+    width: 12px;
+    background-color: white;
+}
+
+.div16-div6::-webkit-scrollbar-thumb {
+    background-color: black;
+    border-radius: 5px;
+}
+
+.div16-div6::-webkit-scrollbar-track {
+    background-color: white;
+    box-shadow: 0 0 2px 2px black inset;
+    border-radius: 5px;
+}
+
+/*7*/
+.div16-div7::-webkit-scrollbar {
+    width: 14px;
+    background-color: white;
+}
+
+.div16-div7::-webkit-scrollbar-thumb {
+    background: repeating-linear-gradient(
+            to bottom,
+            #FE9E0DFF 0, #FE9E0DFF 25%,
+            #f6e52a 25%, #f6e52a 50%);
+    border-radius: 5px;
+}
+
+.div16-div7::-webkit-scrollbar-track {
+    background-color: white;
+    box-shadow: 0 0 2px 2px #999999 inset;
+    border-radius: 5px;
+}
+
+/*8*/
+.div16-div8::-webkit-scrollbar {
+    width: 12px;
+    background-color: white;
+}
+
+.div16-div8::-webkit-scrollbar-thumb {
+    background: repeating-linear-gradient(
+            to bottom,
+            darkgray 0, darkgray 25%,
+            gray 25%, gray 50%);
+    border-radius: 5px;
+}
+
+.div16-div8::-webkit-scrollbar-track {
+    background-color: white;
+    box-shadow: 0 0 2px 2px #999999 inset;
+    border-radius: 5px;
+}
+
+/*9*/
+.div16-div9::-webkit-scrollbar {
+    width: 8px;
+    background-color: white;
+}
+
+.div16-div9::-webkit-scrollbar-thumb {
+    background-color: #7497ff;
+    border-radius: 5px;
+}
+
+.div16-div9::-webkit-scrollbar-track {
+    background-color: white;
+    box-shadow: 0 0 2px 2px #999999 inset;
+    border-radius: 5px;
+}
+
+/*10*/
+.div16-div10::-webkit-scrollbar {
+    width: 10px;
+    background-color: white;
+}
+
+.div16-div10::-webkit-scrollbar-thumb {
+    background: radial-gradient(#410d0d 2%, #f60000 70%);
+    border-radius: 5px;
+}
+
+.div16-div10::-webkit-scrollbar-track {
+    background-color: white;
+    box-shadow: 3px 0 10px 2px #999999 inset;
+    border-radius: 5px;
+}
+
+/*11*/
+.div16-div11::-webkit-scrollbar {
+    width: 8px;
+    background-color: white;
+}
+
+.div16-div11::-webkit-scrollbar-thumb {
+    background: linear-gradient(to top, black, whitesmoke);
+    border-radius: 5px;
+}
+
+.div16-div11::-webkit-scrollbar-track {
+    background-color: white;
+    box-shadow: 0 0 10px 2px #999999 inset;
+    border-radius: 5px;
+}
+
+/*12*/
+.div16-div12::-webkit-scrollbar {
+    width: 12px;
+    background-color: white;
+}
+
+.div16-div12::-webkit-scrollbar-thumb {
+    background: linear-gradient(
+            0deg,
+            green 0%,
+            #6ed36e 50%,
+            green 100%);
+    border-radius: 5px;
+}
+
+.div16-div12::-webkit-scrollbar-track {
+    background-color: white;
+    box-shadow: 0 0 2px 2px #999999 inset;
+    border-radius: 5px;
+}
+
