--- a/week1day5/week1day5task7.css
+++ b/week1day5/week1day5task7.css
@@ -25,7 +25,7 @@ li.file, li.edit {
     cursor: pointer;
 }
 
-li.file:hover:before, li.edit:hover:before {
+li.file:hover:after, li.edit:hover:after {
     content: '';
     display: block;
     position: absolute;
@@ -55,7 +55,7 @@ li.file:hover a.main, li.edit:hover a.main {
     display: none;
     width: 120px;
     position: absolute;
-    padding: 0 3px;
+    padding: 0 8px 0 2px;
     left: 0;
     background-color: white;
 }
