--- a/week2day2/week2day2.css
+++ b/week2day2/week2day2.css
@@ -67,14 +67,12 @@
 
 .div4-input {
     width: 100px;
-    height: 100px;
     border: 1px solid black;
     border-radius: 3px;
 }
 
-.div4-input:hover {
+.div4-input:focus {
     transform: scale(2, 1.5) translateX(50vh);
-    transition-duration: 10s;
 }
 
 /*****5.****/
@@ -166,11 +164,55 @@
 
 @keyframes fly {
     from {
-        transform: rotate(0deg) translateX(80px) rotate(180deg);
+        transform: rotate(0deg) translate(50px, 50px)  rotate(180deg);
     }
     to {
-        transform: rotate(360deg) translateX(80px) rotate(180deg);
+        transform: rotate(360deg) translate(50px, 50px) rotate(180deg);
     }
 }
 
 /*****7.***/
+
+.div7 {
+    margin: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.div7-checkbox {
+    width: 30px;
+    height: 30px;
+    margin-right: 20px;
+    box-shadow: 0 0 2px 2px gray;
+    border-radius: 5px;
+}
+
+.div7-div {
+    width: 30px;
+    height: 30px;
+    background-color: cornflowerblue;
+    box-shadow: 0 0 2px 2px blue;
+}
+
+.div7-checkbox:checked ~.div7-div {
+    animation: checked 3s linear;
+    animation-fill-mode: forwards;
+}
+
+@keyframes checked {
+    from {
+        width: 30px;
+    }
+    to {
+        width: 100vmax;
+    }
+}
+
+.div7-checkbox:not(:checked) ~.div7-div {
+    height: 30px;
+    width: 100vmax;
+    background-color: cornflowerblue;
+    box-shadow: 0 0 2px 2px blue;
+}
+
+/*******8.*****/
