--- a/week2day2/week2day2.css
+++ b/week2day2/week2day2.css
@@ -189,7 +189,7 @@
 
 .div7-div {
     height: 30px;
-    width: 100vh;
+    width: 100vmax;
     background-color: cornflowerblue;
     box-shadow: 0 0 2px 2px blue;
 }
@@ -257,3 +257,45 @@
 }
 
 /*******9.******/
+
+.div9 {
+    width: 500px;
+    height: 60px;
+    background-color: #30343DFF;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.div9-div {
+    width: 470px;
+    height: 40px;
+    background-color: #30343DFF;
+    box-shadow: -0.5px -0.5px 5px 1px black inset;
+    border-radius: 50px;
+}
+
+.div9-div-div {
+    width: 470px;
+    height: 40px;
+    background: linear-gradient(45deg, #3b7308, #76ff00);
+    border-radius: 50px;
+    box-shadow: -0.5px -0.5px 5px 1px black inset;
+    animation: progress1 10s infinite linear;
+    animation-timing-function: cubic-bezier(1, 0, 0.8, 1.5);
+}
+
+
+@keyframes progress1 {
+    0% {
+        width: 0;
+    }
+
+    50% {
+        width: 100%;
+    }
+    100% {
+        width: 0;
+    }
+}
