--- a/week2day3/week2day3.css
+++ b/week2day3/week2day3.css
@@ -161,6 +161,7 @@
     font-size: 30px;
     line-height: 35px;
     color: #000000;
+    display: flex;
 }
 
 .div5-div-span {
@@ -233,10 +234,72 @@
 }
 
 .div5-modal-close {
-    position: absolute;
-    left: 80%;
-    top: 15%;
+    align-self: flex-end;
+    margin-right: 30px;
     color: white;
     text-decoration: none;
     font-size: 1.2em;
 }
+
+/******6.****/
+
+.container6 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #DDDDDD;
+    margin: 20px;
+    height: 80px;
+}
+
+.container-logo {
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 30px;
+    flex-basis: 50%;
+}
+
+.logo {
+    font-weight: bold;
+    color: #233ed5;
+    font-family: Roboto, sans-serif;
+    font-size: 1.2em;
+}
+
+.container-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-basis: 50%;
+}
+
+.div-menu {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    flex-grow: 1;
+}
+
+.menu   {
+    margin-right: 10px;
+    font-family: Roboto, sans-serif;
+    color: #4b4747;
+}
+
+.container-button {
+    margin-right: 10px;
+}
+
+.button {
+    height: 30px;
+    width: 70px;
+    margin: 20px;
+    background-color: #233ed5;
+    color: white;
+    font-family: Roboto, sans-serif;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0 0 2px 1px gray;
+}
+
+/*****7.*****/
