--- a/week2day3/week2day3.css
+++ b/week2day3/week2day3.css
@@ -303,3 +303,67 @@
 }
 
 /*****7.*****/
+
+.container {
+    height: 500px;
+    margin: 20px;
+    background-color: #DDDDDD;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.color {
+    background-color: #b0afaf;
+    border: 0.5px solid gray;
+    border-radius: 1px;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3em;
+    color: #4b4747;
+    font-weight: bold;
+    font-family: Gotham, sans-serif;
+}
+
+.container1 {
+    flex-basis: 33.3%;
+    display: flex;
+}
+
+.container1-5 {
+    flex-basis: 43%;
+}
+
+.container1-3 {
+    flex-basis: 26%;
+}
+
+.container1-4 {
+    flex-basis: 33%;
+}
+
+.container2 {
+    flex-basis: 66.6%;
+    display: flex;
+}
+
+.container2-container1 {
+    flex-basis: 70%;
+    display: flex;
+    flex-direction: column;
+}
+
+.container2-container1-8 {
+    flex-basis: 50%;
+}
+
+.container2-container2 {
+    flex-basis: 30%;
+    display: flex;
+}
+
+.container2-container2-4 {
+    flex-basis: 100%;
+}
