--- a/week2day4/week2day4.css
+++ b/week2day4/week2day4.css
@@ -137,3 +137,53 @@
 }
 
 /*****3.*****/
+
+.container {
+    height: 500px;
+    margin: 20px;
+    background-color: #DDDDDD;
+    padding: 10px;
+    display: grid;
+    grid-template: 1fr 1fr 1fr / 5fr 3fr 4fr;
+}
+
+.color {
+    background-color: #b0afaf;
+    border: 1px solid gray;
+    border-radius: 1px;
+    margin: 10px;
+    font-size: 3em;
+    color: #4b4747;
+    font-weight: bold;
+    font-family: Gotham, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container1-5 {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.container1-3 {
+    grid-column: 2;
+}
+
+.container1-4 {
+    grid-column: 3;
+}
+
+.container2-container1-8 {
+    grid-row: 2;
+    grid-column: 1 / 3 ;
+}
+
+.container2-container2-8 {
+    grid-row: 3;
+    grid-column: 1 / 3 ;
+}
+
+.container2-container2-4 {
+    grid-row: 2 / 4;
+}
