done 10 task 1 chapter 5 day 3 week

--- a/week3day5/week3day5.css
+++ b/week3day5/week3day5.css
@@ -25,3 +25,13 @@
     margin: 10px;
     color: white;
 }
+
+/*10. Дано три элемента. Найдите для первого элемента соседа снизу его соседа снизу (следующий элемент за соседним) и добавьте ему в конец текст '!!!'.*/
+
+.div10 {
+    height: 40px;
+    width: 100px;
+    background-color: #789846;
+    margin: 2px;
+    color: #000000;
+}
