done 3 task 2 chapter 5 day 3 week

--- a/week3day5/week3day5.css
+++ b/week3day5/week3day5.css
@@ -56,3 +56,20 @@
     align-items: center;
     justify-content: center;
 }
+
+/*3. Дата таблица с числами. По нажатию на ячейку в неё должен заноситься квадрат числа, которое она содержит*/
+
+.table3 {
+    border-collapse: collapse;
+}
+
+.td3 {
+    border: 2px solid black;
+    padding: 20px;
+    cursor: pointer;
+    border-collapse: collapse;
+}
+
+.td3:hover {
+    font-weight: bold;
+}
