done 4 task 2 chapter 5 day 3 week

--- a/week3day5/week3day5.css
+++ b/week3day5/week3day5.css
@@ -73,3 +73,6 @@
 .td3:hover {
     font-weight: bold;
 }
+
+/* 4. Сделайте таблицу 5x5. Используя делегирование событий окрашивать красным цветом фон той ячейки, над которой в данный момент зависает курсор*/
+
