--- a/Exam/Exam1.css
+++ b/Exam/Exam1.css
@@ -72,9 +72,39 @@
     right: 17px;
 }
 
+
+.checkbox {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
+.checkbox+label {
+    display: inline-flex;
+    align-items: center;
+}
+
+.checkbox+label::before {
+    content: '';
+    width: 10px;
+    height: 10px;
+    border: 0.1em solid #6c6c6c;
+    border-radius: 2px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    box-shadow: 1px 1px 0 0 #6c6c6c;
+}
+
+.checkbox:checked+label::before {
+    background-image: url(checkbox-icon.png);
+    width: 10px;
+    height: 10px;
+}
+
+
 .button-container {
     position: absolute;
-    right: 15px;
+    right: 17px;
     margin-top: 10px;
 }
 
