--- a/Exam/Exam1.css
+++ b/Exam/Exam1.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .container {
     margin: 10px;
 }
@@ -101,7 +106,6 @@
     height: 10px;
 }
 
-
 .button-container {
     position: absolute;
     right: 17px;
@@ -123,4 +127,17 @@
     font-family: Georgia, sans-serif;
     cursor: cell;
     margin-left: 10px;
+}
+
+@media screen and (max-width: 260px) {
+    .button {
+        margin-left: 10px;
+    }
+    .button-row {
+        margin-top: 20px;
+    }
+
+    .null_column {
+        display: none;
+    }
 }
